feat: Implement photo reminder popup

--- a/frontend/src/app/pages/home/home.page.html
+++ b/frontend/src/app/pages/home/home.page.html
@@ -1,4 +1,10 @@
 <ion-content [fullscreen]="true" class="ww-root">
+  @if (showReminder) {
+    <app-image-reminder-popup 
+      (dismiss)="onReminderDismissed()">
+    </app-image-reminder-popup>
+  }
+  
   <div class="app-shell">
     <!-- Top bar -->
     <header class="topbar">
